# Embebidos

Laboratorio/: componentes.xlsx
Laboratorio/Pra1/: P1_Rodriguez_Guerrero.rar
Laboratorio/Pra1/Entrega/: adc.c  adc.h  adc_main.c  getshowvalue.c  getshowvalue.h  timer.c  timer.h
Laboratorio/Pra1/Myblink/: CMakeLists.txt  main.c
Laboratorio/Pra1/Myblink2/: CMakeLists.txt  blink.c  timer.c  timer.h
Laboratorio/Pra1/adc_high_level/: CMakeLists.txt  adc.c  adc.h  adc_main.c
Laboratorio/Pra1/prueba2_adc/: CMakeLists.txt  adc.c  adc.h  adc_main.c  timer.c  timer.h
Laboratorio/Pra1/prueba3_adc/: adc.c  adc.h  adc_main.c  timer.c
Laboratorio/Pra1/prueba5_adc/: adc_main.c  getshowvalue.c  getshowvalue.h
Laboratorio/Pra1/prueba_adc/: CMakeLists.txt  adc.h  adc_main.c  alarm.c  timer.h
Laboratorio/Pra2/Pb_1/: CMakeLists.txt  gpio.h  keyboard.c  keyboard.h  lcd.c  main.c  timer.c  timer.h
Laboratorio/Pra2/Pb_GPIO/: CMakeLists.txt  gpio.c  gpio.h  main.c
Laboratorio/Pra2/Pb_LCD/: CMakeLists.txt  lcd.c  lcd.h  main.c  timer.c  timer.h
Laboratorio/Pra2/Pb_Teclado/: CMakeLists.txt  gpio.c  keyboard.c  keyboard.h  main.c  timer.c  timer.h
Laboratorio/Pra2/Pb_timer/: CMakeLists.txt  main.c  timer.h
Laboratorio/Pra2/ayudas/: lcd_main.asm
Laboratorio/Pra2/lab2se/: main.c
Laboratorio/Pra3/Aurt/: CMakeLists.txt  main.c
Laboratorio/Pra3/Manejo_IEEE/: CMakeLists.txt  main.c
Laboratorio/Pra3/P_i2c/: CMakeLists.txt  main.c
Laboratorio/Pra4/ADC/: CMakeLists.txt  adc.c  adc.h  events.c  main.c
Laboratorio/Pra4/HC_SR04/: CMakeLists.txt  events.c  hc_sr04.c  (+2 more)
(+151 files in other folders)
